k8s/base/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas = 3
  selector:
    matchLabels:
        app.kubernetes.io/name : frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name : frontend
    spec:
      containers:
      - name: frontend
        image: frontend
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
