k8s/base/frontend/http-route-booking.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-booking-routes
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /home
        - path:
            type: PathPrefix
            value: /static
        - path:
            type: PathPrefix
            value: /register
        - path:
            type: PathPrefix
            value: /verify-2fa
        - path:
            type: PathPrefix
            value: /get-session
      backendRefs:
        - name: frontend
          port: 80
      - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /home
        backendRefs:
        - name: frontend
          port: 80
