k8s/base/frontend/http-route-home_1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route-1
spec:
  parentRefs:
    - name: booking-app-gateway
      namespace: booking-app-main
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: PathPrefix
            value: /anbietermgmt
        - path:
            type: PathPrefix
            value: /add-room
        - path:
            type: PathPrefix
            value: /book-room
        - path:
            type: PathPrefix
            value: /home
        - path:
            type: PathPrefix
            value: /rent
        - path:
            type: PathPrefix
            value: /room-management
        - path:
            type: PathPrefix
            value: /static
      backendRefs:
        - name: frontend
          port: 80
