k8s/base/frontend/http-route-home_2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route-2
spec:
  parentRefs:
    - name: booking-app-gateway
      namespace: booking-app-main
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /user-profile
        - path:
            type: PathPrefix
            value: /upload-pdf
        - path:
            type: PathPrefix
            value: /update-profile
        - path:
            type: PathPrefix
            value: /get-users
        - path:
            type: PathPrefix
            value: /booked-management
        - path:
            type: PathPrefix
            value: /get-session
        - path:
            type: PathPrefix
            value: /studentmgmt
        - path:
            type: PathPrefix
            value: /get-faq
      backendRefs:
        - name: frontend
          port: 80
