k8s/base/frontend/http-route-home_3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route-3
spec:
  parentRefs:
    - name: booking-app-gateway
      namespace: booking-app-main
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /send-booking-email
        - path:
            type: PathPrefix
            value: /verify-2fa
        - path:
            type: PathPrefix
            value: /register
        - path:
            type: RegularExpression
            value: "^/hotel-details/\\d+$"
        - path:
            type: RegularExpression
            value: "^/user-details/\\d+$"
        - path:
            type: PathPrefix
            value: /static
      backendRefs:
        - name: frontend
          port: 80
