k8s/base/frontend/http-route-management.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-management-routes
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kundenmanagement
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /studentmgmt
      backendRefs:
        - name: frontend
          port: 80
