k8s/base/frontend/http-route-users.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-user-routes
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /user-profile
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /user-details
      backendRefs:
        - name: frontend
          port: 80
